fixed alignment of creators

--- a/client/src/components/layout/creators.css
+++ b/client/src/components/layout/creators.css
@@ -28,7 +28,7 @@
     background-color: transparent;
     width: 300px;
     height: 300px;
-    perspective: 1000px;
+    /* perspective: 1000px; */
   }
   
   .flip-card-inner {
@@ -51,22 +51,23 @@
     backface-visibility: hidden;
   }
   
-  /* .flip-card-front {
-    background-color: #bbb; 
+  .flip-card-front {
+
     color: black; 
-  } */
+  }
   
   .flip-card-back {
     /* background: linear-gradient(146deg, rgba(127,127,213,1) 0%, rgba(145,234,228,1) 100%)!important; */
+    background: rgba(0, 0, 0, 0.4)!important;
     color: white;
     transform: rotateY(180deg);
   }
 
-  .fa-github-square, .fa-linkedin {
+  /* .fa-github-square, .fa-linkedin {
       padding-top: 3rem;
       font-size: 5rem;
       color: white;
-  }
+  } */
 
   .fa-github-square:hover, .fa-linkedin:hover {
     color: #000000;
